# attest

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.devcontainer/: .poetry.lock.sha256  Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/agents/: README.md  attest-architecture.agent.md  attest-assurance.agent.md  attest-python-implementer.agent.md
.github/instructions/: README.md  collections.instructions.md  docs.instructions.md  python.instructions.md  quality-tooling.instructions.md  security.instructions.md
.github/workflows/: ci.yml
docs/: index.md
docs/design/: architecture.md  attest-overview-and-architecture.md  overlay-design.md
docs/operator/: workflows.md
docs/requirements/: requirements.md
docs/roadmap/: roadmap.md
src/attest/: cli.py  redaction.py
src/attest/diff/: baseline.py  differ.py
src/attest/engine/: __init__.py  aggregator.py  applicability.py  cache.py  evaluator.py  job.py  matchers.py  (+1 more)
tests/: test_overlay.py  test_redaction.py  test_smoke.py
tests/test_diff/: test_differ.py
tests/test_engine/: test_aggregator.py  test_determinism.py  test_evaluator.py  test_job.py  test_matchers.py
tests/test_policy/: test_loader.py  test_resolver.py  test_schemas.py
tests/test_report/: test_canonical.py  test_dashboard.py  test_reporters.py
tests/test_resources/: test_resources.py
tests/test_waivers/: test_waivers.py
(+37 files in other folders)
